--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
       <a href="https://x.com/abhisoni5870?s=21" class="twitter"><i class="bi bi-twitter-x"></i></a>
       <a href="https://www.facebook.com/share/197v5vQNQs/?mibextid=wwXIfr" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="https://www.instagram.com/mr___abhi__________?igsh=MWszcTFzcTZoaWJ2Zg%3D%3D&utm_source=qr" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="https://us04web.zoom.us/launch/chat?src=direct_chat_link&email=abhishekhtw%40gmail.com" class="zoom"><i class="bi bi-zoom"></i></a>
+      <a href="https://us04web.zoom.us/launch/chat?src=direct_chat_link&email=abhishekhtw%40gmail.com"
+   target="_blank"
+   class="zoom">
+  <i class="bi bi-camera-video-fill"></i>
+</a>
       <a href="www.linkedin.com/in/abhishek-kumar-soni-4193b2267" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
