--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li>
   <a href="resume.pdf" download>
-    <i class="bi bi-file-earmark-text navicon"></i> Resume
+    <i class="bi bi-file-earmark-text navicon"></i> Resume Pdf
   </a>
 </li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
