--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li>
-  <a href="resume.pdf" download>
-    <i class="bi bi-file-earmark-text navicon"></i> Resume.Pdf
+  <a href="portfolio/resume.pdf" download>
+    <i class="bi bi-file-earmark-text navicon"></i> Download Resume
   </a>
 </li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
